<resources>
    <string name="app_name">FantASd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VÆLKØMMIN TE FÆNT</string>
    <string name="nav_header_subtitle">epost@epost.no</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Logg Inn</string>
    <string name="menu_create">Registrerrerering</string>
    <string name="menu_leggtil">Legg til</string>
    <string name="menu_buy">Kjøp</string>
    <string name="menu_marked">Kjøp</string>


    <!-- User/Login -->
    <string name="uid">Brukernavn</string>
    <string name="pwd">Passord</string>
    <string name="eml">Epost</string>
    <string name="login">Login</string>
    <string name="register">Registrer</string>
    <string name="someError">Noe gikk galt</string>
    <string name="loginfeilet">Login feilet</string>
    <string name="itemfeilet">Item feilet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="itemName">Navn</string>
    <string name="itemPrice">Pris</string>
    <string name="itemDesc">Beskrivelse</string>
    <string name="itemId">Item Id</string>

</resources>