<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="no.nyseth.fantasd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="itemId"
            app:argType="long"
            android:defaultValue="1L"
            />
        <action
            android:id="@+id/action_navToAddItem"
            app:destination="@+id/nav_additem"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="no.nyseth.fantasd.ui.FragmentLogin"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navToHome"
            app:destination="@+id/nav_home"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_create"
        android:name="no.nyseth.fantasd.ui.FragmentCreate"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create">
        <action
            android:id="@+id/action_navToHome"
            app:destination="@+id/nav_home"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_additem"
        android:name="no.nyseth.fantasd.ui.FragmentAddItem"
        android:label="@string/menu_leggtil"
        tools:layout="@layout/fragment_additem"
        />

    <fragment
        android:id="@+id/nav_buyitem"
        android:name="no.nyseth.fantasd.ui.FragmentBuyItem"
        android:label="@string/menu_buy"
        tools:layout="@layout/fragment_buyitem"
        />

    <fragment
        android:id="@+id/nav_market"
        android:name="no.nyseth.fantasd.ui.market.MarketFragment"
        android:label="@string/menu_marked"
        tools:layout="@layout/fragment_market">
        <action
            android:id="@+id/action_navMarkToItem"
            app:destination="@id/nav_item"/>
    </fragment>

    <fragment
        android:id="@+id/nav_item"
        android:name="no.nyseth.fantasd.ui.item.ItemFragment"
        android:label="Mårn"
        tools:layout="@layout/fragment_item"
        />
</navigation>